--- a/llmKnoledge.ipynb
+++ b/llmKnoledge.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOz6quMpUA4D9vzS1Tjkp0i",
+      "authorship_tag": "ABX9TyPu8cqSuS5jDJHPwu+6ej8o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -386,7 +386,7 @@
         "import os\n",
         "\n",
         "# Manually set the API key here\n",
-        "api_key = 'AIzaSyBJs-WnWArfTWFIz13dLrl6-Vhgoq8LOPg'  # Replace this with your actual GEMINI API key\n",
+        "api_key = ''  # Replace this with your actual GEMINI API key\n",
         "genai.configure(api_key=api_key)\n",
         "\n",
         "# Function to generate entities from the prompt\n",
@@ -484,7 +484,7 @@
         "#     'Outputs_JD': outputs_JD,\n",
         "#     'Outputs_CV': outputs_CV\n",
         "# })\n",
-        "# dfx.to_csv(\"outputs.csv\", index=False)\n"
+        "# dfx.to_csv(\"outputs.csv\", index=False)"
       ]
     },
     {
